# rest_faiss

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_server.py
DATA/: knowledge_data.csv  noun_base.csv  test_knowledge.csv
docs/: advanced_search.md  dynamic_columns.md  model_cache.md
rest_faiss/: faiss_serch.py  main_app.py
tests/: test_api.py  test_dynamic_columns.py  test_n100.py
