[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faiss-knowledge-search"
version = "1.0.0"
description = "高性能FAISS検索エンジンを使用した知識ベース検索APIサーバー"
authors = [
    {name = "Moge800", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "jaconv>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/Moge800/faiss-knowledge-search"
Repository = "https://github.com/Moge800/faiss-knowledge-search"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
][build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faiss-knowledge-search"
version = "1.0.0"
description = "高性能FAISS検索エンジンを使用した知識ベース検索APIサーバー"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "jaconv>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/Moge800/faiss-knowledge-search"
Repository = "https://github.com/Moge800/faiss-knowledge-search"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]